# gapi

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  dashboard.html  docker-compose.yaml
frontend/: Cargo.toml  docker-compose.yaml  index.html  manifest.json  nginx.conf  sw.js  tailwind.config.js
frontend/src/: api.rs  main.rs  models.rs  state.rs  theme.rs
frontend/src/components/: activities.rs  config_bar.rs  mod.rs  trend_charts.rs  vitals_grid.rs
frontend/src/components/charts/: bar_chart.rs  gauge.rs  heatmap.rs  mod.rs  pie_chart.rs  stat_panel.rs  state_timeline.rs  timeseries.rs
frontend/src/components/sections/: intraday.rs  mod.rs  recent_activities.rs  trends.rs
frontend/src/pages/: activity.rs  dashboard.rs  heart.rs  mod.rs  settings.rs  sleep.rs  training.rs  trends.rs
frontend/style/: input.css  output.css
scripts/: deploy.sh  dev.sh  e2e-test.sh  garmin-setup.sh  gen-keys.sh  migrate-session.sh
src/: config.rs  db.rs  domain.rs  main.rs  state.rs  sync.rs  vault.rs
src/events/: mod.rs  webhook.rs
src/garmin/: api.rs  auth.rs  mod.rs
src/handlers/: activities.rs  credentials.rs  data.rs  health.rs  intraday.rs  mod.rs  sync.rs  webhooks.rs
src/repository/: data.rs  extended.rs  intraday.rs  mod.rs  users.rs  webhooks.rs
