[package]
name = "garmin_api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Database (SQLite)
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# HTTP client (Garmin API)
reqwest = { version = "0.12", features = ["json", "cookies"] }
url = "2"

# Encryption (vault)
chacha20poly1305 = "0.10"
base64 = "0.22"
rand = "0.9"

# OAuth1 signing
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
regex = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
